--- a/host/Vagrantfile
+++ b/host/Vagrantfile
@@ -9,7 +9,12 @@ Vagrant.configure(2) do |config|
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
-
+	
+	config.vm.provider "virtualbox" do |v|
+      v.memory = 2048
+      v.cpus = 4
+  end
+	
   # Spin up a "host box" for use with the Docker provider
   # and then provision it with Docker
   config.vm.box = "chef/centos-6.6"
@@ -34,5 +39,14 @@ Vagrant.configure(2) do |config|
 
   # Always use Vagrant's default insecure key
   config.ssh.insert_key = false
+	
+	config.vm.provision "shell", inline:
+      "curl -L https://github.com/docker/compose/releases/download/1.2.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose"
 
+  config.vm.provision "shell", inline:
+      "sudo cp ~/docker-compose /usr/local/bin/docker-compose"
+
+  config.vm.provision "shell", inline:
+      "sudo chmod +x /usr/local/bin/docker-compose"
+	
 end
